Fix a couple of typos

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
         that's probably not interesting to people outside of that service
         team.</dd>
 
-        <dt>The should not duplicate other resources (too much)</dt>
+        <dt>They should not duplicate other resources (too much)</dt>
         <dd>Mostly, these maps are intended to share information that's
         currently only in people's heads. Where useful information exists in
         other places, particularly if it's more detailed, then this map should
