Documented non-key fields in representations, so we can link to the stadnard definitions

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,10 @@
         <li><a href="#about"><img src="resources/about.png" />
         About the Data Maps</a></li>
         <li><a href="logical.svg"><img src="resources/logical.png" />Logical Objects map</a>: The real-world things we care about</li>
+        <li><a href="https://docs.google.com/document/d/1XgYkA-lmoLHAheooVlZXbL1s7psTS5ihRKSEjQH0hw0/edit?usp=sharing"><img src="resources/standard-definitions.png" />Standard Definitions</a>: The lifecycles of logical objects</li>
         <li><a href="physical.svg"><img src="resources/physical.png" />Physical Databases map</a>: Where we store data</li>
         <li><a href="representations.svg"><img src="resources/representations.png" />Representations map</a>: Which databases represent data about which real-world objects</li>
-        <li><a href="representations.html"><img src="resources/representations-table.png" />Detailed Representations table</a>: Listing the physical database tables and ID fields</li>
+        <li><a href="representations.html"><img src="resources/representations-table.png" />Detailed Representations table</a>: Listing the physical database tables and fields (including how the Standard Definitions are represnted)</li>
         <li><a href="actors_dbs.svg"><img src="resources/actors.png" />Actors map</a>: Which systems/services/organisations use which databases</li>
         <li><a href="key.svg"><img src="resources/key.png" />Key to the Diagrams</a>: A quick description of what the symbols and arrows mean</li>
       </ul>
